# stroke_prediction_model

stroke_prediction/: .gitignore  README.md  main.py  pyproject.toml
stroke_prediction/Notebooks/: EDA.ipynb  Feature.ipynb
