[project]
name = "stroke-prediction"
version = "0.1.0"
description = "Academic project: Machine Learning approach to stroke prediction"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.6",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "seaborn>=0.13.2",
    "scikit-learn>=1.3.0",
    "imbalanced-learn>=0.11.0",
    "joblib>=1.3.0",
    "xgboost>=2.0.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "jupyter>=1.0.0",
    "notebook>=7.0.0",
]
